# llvm10.0.0-example

./: CMakeLists.txt  main.cpp  sum.bc  sum.cpp  sum.ll
cmake/: FindLibClang.cmake
